welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: reassignment to val
			decalage = decalage + 1
                                 ^